--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
 		"phpoffice/phpspreadsheet": "^1.18",
 		"phpoffice/phpword": "^0.18.2",
 		"dompdf/dompdf": "^1.0",
-		"league/glide": "^2.0"
+		"league/glide": "^2.0",
+		"mailjet/mailjet-apiv3-php": "^1.5",
+		"chriskacerguis/codeigniter-restserver": "^3.1"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
