--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"dompdf/dompdf": "^1.0",
 		"league/glide": "^2.0",
 		"mailjet/mailjet-apiv3-php": "^1.5",
-		"chriskacerguis/codeigniter-restserver": "^3.1"
+		"chriskacerguis/codeigniter-restserver": "dev-master",
+		"google/recaptcha": "^1.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
