--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"google/recaptcha": "^1.2",
 		"seunmatt/codeigniter-log-viewer": "^1.1",
 		"ozdemir/datatables": "^2.3",
-		"guzzlehttp/guzzle": "^7.0"
+		"guzzlehttp/guzzle": "^7.0",
+		"league/flysystem": "^2.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
