--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
 	},
 	"require-dev": {
 		"mikey179/vfsstream": "1.1.*",
-		"phpunit/phpunit": "4.* || 5.*"
+		"phpunit/phpunit": "4.* || 5.*",
+		"kenjis/codeigniter-cli": "^0.1.0"
 	}
 }
