--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
 		"ozdemir/datatables": "^2.3",
 		"guzzlehttp/guzzle": "^7.0",
 		"league/flysystem": "^2.2",
-		"pusher/pusher-php-server": "^6.1"
+		"pusher/pusher-php-server": "^6.1",
+		"endroid/qr-code": "^4.3",
+		"kreait/firebase-php": "^5.24",
+		"picqer/php-barcode-generator": "^2.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
