--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"pusher/pusher-php-server": "^6.1",
 		"endroid/qr-code": "^4.3",
 		"kreait/firebase-php": "^5.24",
-		"picqer/php-barcode-generator": "^2.2"
+		"picqer/php-barcode-generator": "^2.2",
+		"ramsey/uuid": "^4.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
